--- a/manc_dev/templates/manc_dev/base.html
+++ b/manc_dev/templates/manc_dev/base.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Manc's dev</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+        .page-header {
+            background-color: grey;
+            margin-top: 0;
+            padding: 20px 20px 10px 40px;
+        }
+        .page-header h2 a {
+            color:white;
+            font-size: 20pt;
+            text-decoration: none;
+        }
+        .top-menu h5 a{
+            color:white;
+            margin-top:9px;
+            float:right;
+            margin-right:20px;
+            text-decoration:none;
+        }
+    </style>
 </head>
 <body>
     <div class="page-header">
-        <h2>MANC'S DEV</h2>
+        <button type="submit" class="btn btn-success" style="float:right;margin-top:10px">Sign In</button>
+        <div class="top-menu">
+            <h5><a href="/">Contact us</a></h5>
+            <h5><a href="/">Careers</a></h5>
+            <h5><a href="/">About</a></h5>
+        </div>
+        <h2><a href="/">MANC'S DEV</a></h2>
     </div>
     <div class="content container">
         <div class="row">
