--- a/manc_dev/templates/manc_dev/home_page.html
+++ b/manc_dev/templates/manc_dev/home_page.html
@@ -1,7 +1,51 @@
 {% extends 'manc_dev/base.html' %}
 
 {% block content %}
-
-    <p>This is the testing page...</p>
-
+    <div class="row">
+        <div class="col-md-8">
+            <div class="lap">
+                <img src="https://www.coderedcorp.com/media/python-office.jpg">
+            </div>
+        </div>
+    </div>
+    <br>
+    <hr>
+    <h1 style="text-align:center;">Expertise</h1>
+    <br>
+    <div class="row" style="text-align:center;margin-top:30px">
+        <div class="col-sm-4">
+            <i class="fas fa-code fa-5x"></i>
+            <p>Learning to code is learning how our new reality is built.If your are looking for the web development this is best place to crack some awesome projects.</p>
+        </div>
+        <div class="col-sm-4">
+            <i class="fas fa-business-time fa-5x"></i>
+            <p>This brings various business benefits to you and found to be more suitable for customizing larger applications and feature like Extensibility,Scalability..etc,</p>
+        </div>
+        <div class="col-sm-4">
+            <i class="fas fa-chart-line fa-5x"></i>
+            <p>It can be used as a spreadsheet programs are not easily replicated.Although it is straight forward to know and it is easy to know and replicable to your business.</p>
+        </div>
+    </div>
+    <div class="row" style="text-align:center;margin-top:100px;">
+        <div class="col-sm-4">
+            <i class="fas fa-tasks fa-5x"></i>
+            <p>MultiTasking methods are dive into asynchronous,non-blocking methods and we can use in Web applications Enterprise, business applications, Language development and Web development </p>
+        </div>
+        <div class="col-sm-4">
+            <i class="fas fa-users fa-5x"></i>
+            <p>It is easy to connect with the clients all over the world and make the belief that every programmer can take around the virtual world.</p>
+        </div>
+        <div class="col-sm-4">
+            <i class="fas fa-globe fa-5x"></i>
+            <p>Every repository and line of coding is just conneted all over the world and even just when you are in forest and where the internet is killed.</p>
+        </div>
+    </div>
+    <br>
+    <hr>
 {% endblock %}
+
+
+
+
+
+
