--- a/manc_dev/templates/manc_dev/home_page.html
+++ b/manc_dev/templates/manc_dev/home_page.html
@@ -12,40 +12,57 @@
     <hr>
     <h1 style="text-align:center;">Expertise</h1>
     <br>
-    <div class="row" style="text-align:center;margin-top:30px">
+    <div class="row" style="text-align:center;margin-top:20px;">
         <div class="col-sm-4">
             <i class="fas fa-code fa-5x"></i>
-            <p>Learning to code is learning how our new reality is built.If your are looking for the web development this is best place to crack some awesome projects.</p>
+            <p style="margin-top:30px">Learning to code is learning how our new reality is built.If your are looking for the web development this is best place to crack some awesome projects.</p>
         </div>
         <div class="col-sm-4">
             <i class="fas fa-business-time fa-5x"></i>
-            <p>This brings various business benefits to you and found to be more suitable for customizing larger applications and feature like Extensibility,Scalability..etc,</p>
+            <p style="margin-top:30px">This brings various business benefits to you and found to be more suitable for customizing larger applications and feature like Extensibility,Scalability..etc,</p>
         </div>
         <div class="col-sm-4">
             <i class="fas fa-chart-line fa-5x"></i>
-            <p>It can be used as a spreadsheet programs are not easily replicated.Although it is straight forward to know and it is easy to know and replicable to your business.</p>
+            <p style="margin-top:30px;">It can be used as a spreadsheet programs are not easily replicated.Although it is straight forward to know and it is easy to know and replicable to your business.</p>
         </div>
     </div>
-    <div class="row" style="text-align:center;margin-top:100px;">
+    <div class="row" style="text-align:center;margin-top:50px;">
         <div class="col-sm-4">
             <i class="fas fa-tasks fa-5x"></i>
-            <p>MultiTasking methods are dive into asynchronous,non-blocking methods and we can use in Web applications Enterprise, business applications, Language development and Web development </p>
+            <p style="margin-top:30px;">MultiTasking methods are dive into asynchronous,non-blocking methods and we can use in Web applications Enterprise, business applications, Language development and Web development </p>
         </div>
         <div class="col-sm-4">
             <i class="fas fa-users fa-5x"></i>
-            <p>It is easy to connect with the clients all over the world and make the belief that every programmer can take around the virtual world.</p>
+            <p style="margin-top:30px;">It is easy to connect with the clients all over the world and make the belief that every programmer can take around the virtual world.</p>
         </div>
         <div class="col-sm-4">
             <i class="fas fa-globe fa-5x"></i>
-            <p>Every repository and line of coding is just conneted all over the world and even just when you are in forest and where the internet is killed.</p>
+            <p style="margin-top:30px;">Every repository and line of coding is just conneted all over the world and even just when you are in forest and where the internet is killed.</p>
         </div>
     </div>
     <br>
     <hr>
+    <div class="row" style="text-align:center;margin-top:50px;">
+        <div class="col-md-6">
+            <i class="far fa-user-circle fa-10x"></i>
+            <p style="margin-top:50px;">Seeing the vast array of tools available for Python as well as correcting the bad habits and methods I had been acquiring while using/learning Python for the last few months.</p>
+        </div>
+        <div class="col-md-6">
+            <i class="far fa-user-circle fa-10x"></i>
+            <p style="margin-top:50px;">He is an excellent instructor who conveyed his enthusiasm for the subject and dealt adeptly with the various levels of experience in the class.</p>
+        </div>
+    </div>
+    <br>
+    <hr>
+    <div class="row" style="text-align:center">
+        <div class="col-md-12">
+            <h2 style="margin-top:40px;">Book a seat and become a badass programmer</h2>
+        </div>
+        <div class="col-md-12" style="margin-top:30px;margin-bottom:30px;">
+            <button type="submit" class="btn btn-success">Login</button>(or)
+            <button type="submit" class="btn btn-success">Signup</button>
+        </div>
+    </div>
+    <br>
+
 {% endblock %}
-
-
-
-
-
-
