--- a/manc_dev/templates/manc_dev/home_page.html
+++ b/manc_dev/templates/manc_dev/home_page.html
@@ -59,7 +59,8 @@
             <h2 style="margin-top:40px;">Book a seat and become a badass programmer</h2>
         </div>
         <div class="col-md-12" style="margin-top:30px;margin-bottom:30px;">
-            <a href="/">Login</a> (or) <a href="{% url 'signup' %}">Signup</a>
+            <a href="{% url 'login' %}"><button type="submit" class="btn btn-success">login</button></a> (or)
+                <a href="{% url 'signup' %}"><button type="submit" class="btn btn-success">signup</button></a>
         </div>
     </div>
     <br>
